@@ -1,10 +1,12 @@
-momentuHMM 1.4.1 2018-03-14
+momentuHMM 1.4.1 2018-03-15
 -----------------
 NEW FEATURES
 
 * timeInStates function added for calculating activity budgets
 
 CHANGES
+
+* bug fix when a pseudo-design matrix formula includes interactions with >1 factor variable
 
 * check and print package version upon loading
 
